<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main.MainActivity">\
    <TextView
        android:text="@string/wallet_balance"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <ScrollView
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sv_wallet">
            <LinearLayout
                    android:id="@+id/ll_wallet"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </LinearLayout>
        </ScrollView>

        <ListView
                android:id="@+id/lv_currencies"
                android:background="@color/white"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintVertical_weight="0.5"
                tools:targetApi="lollipop">
        </ListView>

    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/btn_add_curr"
            android:background="@drawable/btn_indigo_round"
            android:textColor="@color/white"
            android:layout_marginBottom="2dp"
            android:text="@string/add_curr"
            android:textStyle="bold"
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    <Button
            android:id="@+id/btn_convert_curr"
            android:background="@drawable/btn_indigo_round"
            android:layout_marginBottom="2dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/conv_curr"
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

</LinearLayout>