<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:weightSum="4"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/grey_200"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/convertion"
        android:layout_marginTop="10dp"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/white_border_black"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/amount"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_from_curr_amount"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/currency"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/spn_from_curr"
            android:background="@color/white"
            android:dropDownSelector="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/ic_chev_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/ic_chev_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/currency"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/spn_to_curr"
            android:background="@color/white"
            android:dropDownSelector="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_convert"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_indigo_round"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/white_border_black"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/converted"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/et_to_curr_amount"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>